--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,6 @@ spring:
     activate:
       on-profile: prod # java -jar -Dspring.profiles.active=prod {빌드된 jar 파일명} 명령어 통해 구분
   datasource:
-    url: jdbc:mysql://{rds 주소}:3306/mydb
+    url: jdbc:mysql://database-1.ctw04q2w6p1t.ap-northeast-2.rds.amazonaws.com:3306/mydb
     username: admin
     password: password
